Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19407

Explorer Search Pane : Caret is in the middle of the "Filename" field

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.15
    • Win32SS, Wine
    • None

    Description

      reactos-bootcd-0.4.15-dev-7322-g3558b7b-x86-gcc-lin-dbg

      • Open Explorer Search Pane
      • Caret is in the middle of the "Filename" field

      The offset used is the one from the "Address" field (or "look in" combo) => there must be some "static" variable passed from one edit control to the next

      • Expected result : left aligned
      • as soon as some activity in this text box, caret jumps to its expected leftmost position.

      Note : adding ES_LEFT style does NOT change this ( https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/browseui/lang/fr-FR.rc;hb=f380a5104034604de6a8ca3d7b90a15a459e894b#l160 )

      Looks like a variation of CORE-15780

      DougLyons DarkShadow44 I_Kill_Bugs : any clue ? Btw, now that the proposed patches from CORE-15780 have been integrated upstream it could also be an opportunity to reduce diff in comctl32.

      Guilty code confirmed as EDIT_EM_PosFromChar since forcing pt.x to 0 in EDIT_SetCaretPos put the caret to the right most position as expected

      Attachments

        1. image-2023-12-27-10-05-32-822.png
          1 kB
          KRosUser
        2. image-2023-12-28-13-24-13-596.png
          6 kB
          KRosUser
        3. image-2023-12-28-13-25-31-889.png
          8 kB
          KRosUser
        4. comctl32_edit_caret_pos-04.patch
          0.6 kB
          DougLyons
        5. comctl32_comboex.patch
          0.8 kB
          DougLyons
        6. csearchbar-01.patch
          0.5 kB
          DougLyons
        7. SetCaret.patch
          1 kB
          I_Kill_Bugs
        8. SetCaret02.patch
          1 kB
          DougLyons
        9. SetCaret03.patch
          1 kB
          DougLyons
        10. image-2024-01-09-20-52-37-465.png
          7 kB
          KRosUser
        11. comctl32_listview_only.patch
          10 kB
          DougLyons
        12. comctl32_winetest_show_success.patch
          0.6 kB
          DougLyons
        13. SetCaret03_success.patch
          2 kB
          DougLyons

        Activity

          People

            DougLyons DougLyons
            KRosUser KRosUser
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: