Fix Cursor Position in "...file name:" box when opening from Explorer 'Search' toolbar (#6333)

Original patch by @I_Kill_Bugs.
Fix Cursor being in middle of '...file name:' edit box when using 'Search' from the Explorer toolbar.

JIRA issue: CORE-19407